// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analytics Metrics matches snapshot 1`] = `
.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin: -12px;
}

.emotion-3 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
  -webkit-flex: 0 0 264px;
  -ms-flex: 0 0 264px;
  flex: 0 0 264px;
  margin: 12px;
  padding: 18px 24px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  height: 48px;
  margin-bottom: 16px;
  width: 48px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: 19px;
}

[data-role='vehicles-on-track'] .emotion-0 {
  background-color: rgba(51,172,46,0.15);
  background-image: url(./check-purple.svg);
}

[data-role='distance-driven'] .emotion-0 {
  background-color: rgba(0,193,212,0.15);
  background-image: url(./marker-blue.svg);
}

[data-role='energy-consumed'] .emotion-0 {
  background-color: rgba(140,84,255,0.15);
  background-image: url(./energy.svg);
}

[data-role='total-drive-time'] .emotion-0 {
  background-color: rgba(247,193,55,0.15);
  background-image: url(./dynamic.svg);
}

.emotion-1 {
  font-size: 320%;
  font-weight: 300;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.emotion-2 {
  margin-top: 1px;
  color: #8798ad;
  line-height: 1.47;
}

<div
  className="emotion-16"
>
  <div
    className="emotion-3"
    data-role="vehicles-on-track"
  >
    <div
      className="emotion-0"
    />
    <div
      className="emotion-1"
    >
      $1,428
    </div>
    <div
      className="emotion-2"
    >
      Vehicles on track
    </div>
  </div>
  <div
    className="emotion-3"
    data-role="distance-driven"
  >
    <div
      className="emotion-0"
    />
    <div
      className="emotion-1"
    >
      158.3 mi
    </div>
    <div
      className="emotion-2"
    >
      Distance driven
    </div>
  </div>
  <div
    className="emotion-3"
    data-role="energy-consumed"
  >
    <div
      className="emotion-0"
    />
    <div
      className="emotion-1"
    >
      87.4 kWh
    </div>
    <div
      className="emotion-2"
    >
      Energy consumed
    </div>
  </div>
  <div
    className="emotion-3"
    data-role="total-drive-time"
  >
    <div
      className="emotion-0"
    />
    <div
      className="emotion-1"
    >
      24.2 h
    </div>
    <div
      className="emotion-2"
    >
      Total drive time
    </div>
  </div>
</div>
`;

exports[`Analytics Revenue matches snapshot 1`] = `
.emotion-1 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-1 .recharts-area-dot {
  fill: #fff;
}

.emotion-1 .recharts-cartesian-axis-tick-value {
  fill: #b0bac9;
}

.emotion-1 .recharts-legend-item {
  margin-left: 12px;
  color: #8798ad;
  font-size: 15px;
}

.emotion-1 .recharts-legend-item-text {
  margin-left: 6px;
  vertical-align: middle;
}

.emotion-1 .recharts-legend-wrapper {
  margin: 0 -10px;
  -webkit-transform: translateY(-60%);
  -ms-transform: translateY(-60%);
  transform: translateY(-60%);
}

.emotion-1 .recharts-responsive-Surface {
  margin: 45px -10px 0;
}

.emotion-0 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

<div
  className="emotion-1"
>
  <h3
    className="emotion-0"
  >
    Revenue
  </h3>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 340,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Analytics Weekday matches snapshot 1`] = `
.emotion-0 {
  margin: 0 0 26px 0;
  color: #8798ad;
  font-size: 13px;
  font-weight: 400;
  -webkit-letter-spacing: 1.2px;
  -moz-letter-spacing: 1.2px;
  -ms-letter-spacing: 1.2px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

.emotion-1 {
  display: block;
  border-radius: 1px;
  border: solid 1px rgba(46,91,255,0.08);
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  padding: 32px 24px;
  background-color: #fff;
}

.emotion-1 .recharts-area-dot {
  fill: #fff;
}

.emotion-1 .recharts-cartesian-axis-tick-value {
  fill: #b0bac9;
}

.emotion-1 .recharts-legend-item {
  margin-left: 12px;
  color: #8798ad;
  font-size: 15px;
}

.emotion-1 .recharts-legend-item-text {
  margin-left: 6px;
  vertical-align: middle;
}

.emotion-1 .recharts-legend-wrapper {
  margin: 0 -10px;
  -webkit-transform: translateY(-60%);
  -ms-transform: translateY(-60%);
  transform: translateY(-60%);
}

.emotion-1 .recharts-responsive-Surface {
  margin: 45px -10px 0;
}

<div
  className="emotion-1"
>
  <h3
    className="emotion-0"
  >
    Trips by Weekday
  </h3>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 340,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;
